--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: Ecological-Complexity-Lab
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: We strive to uncover the complexity of ecological systems across scales.
 header: images/background.jpg
 footer: images/background.jpg
 
