--- a/_config.yaml
+++ b/_config.yaml
@@ -8,8 +8,8 @@ footer: images/background.jpg
 # site social media and other links
 links:
   email: contact@Ecological-Complexity-Lab.com
-  orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
+  orcid: 0000-0003-0430-5568
+  google-scholar: orkq9UIAAAAJ
   github: Ecological-Complexity-Lab
   twitter: Ecological-Complexity-Lab
   youtube: Ecological-Complexity-Lab
