--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: Ecological-Complexity-Lab
+title: Ecological Complexity Lab
 subtitle: 
 description: We strive to uncover the complexity of ecological systems across scales.
 header: images/background.jpg
