--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -16,8 +16,12 @@
     - collaboration
   repo: greenelab/meta-review
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
+- id: doi:10.32942/X28G7K
+  repo: greenelab/meta-review
 
-- id: doi:10.7554/eLife.32822
+- id: doi:10.32942/X2161C
   image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+
+- id: doi:10.1111/2041-210X.14225
+  repo: https://github.com/Ecological-Complexity-Lab/emln
+  description: [Website](https://ecological-complexity-lab.github.io/emln_package/index.html)
