--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,23 +1,13 @@
-- id: doi:10.1371/journal.pcbi.1007128
+- id: doi:10.1111/2041-210X.14225
   type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2020-12-4
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  description: EMLN package and guidelines
+  date: 2023-11-1
+  image: https://besjournals.onlinelibrary.wiley.com/cms/asset/d12add0e-b1fd-4727-9d4d-affcbc5e65c8/mee314225-fig-0001-m.jpg
   buttons:
-    - type: manubot
-      link: https://greenelab.github.io/meta-review/
-    - type: source
-      text: Manuscript Source
-      link: https://github.com/greenelab/meta-review
+      link: https://github.com/Ecological-Complexity-Lab/emln_package
     - type: website
-      link: http://manubot.org/
+      link: https://ecological-complexity-lab.github.io/emln_package/
   tags:
-    - open science
-    - collaboration
-  repo: greenelab/meta-review
-
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-
-- id: doi:10.7554/eLife.32822
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+    - R
+    - package
+  repo: https://github.com/Ecological-Complexity-Lab/emln_package
