--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -7,3 +7,15 @@
   tags:
     - multilayer
     - software
+
+
+
+- title: Structure and dynamics of ecological multilayer networks
+  image: images/photo.jpg
+  description: The study of networks has been a fundamental component of population and community ecology but ecological networks have been typically studied in isolation – that is, they involve a single type of interaction or represent a particular community that it is not connected to others. Recent advances in the field of multilayer networks in network science, together with an increase in the availability of adequate ecological data, now provide an exciting opportunity for ecologists to move beyond studies of isolated networks. In our research, we use ecological multilayer networks to investigate the variation across interconnected ecological networks such as those interconnected in space, time, or involving several interaction types. We also use this framework to study socio-ecological networks in which human activities are directly connected to ecological nodes. In addition, we develop methodology to facilitate and advance the analysis of ecological multilayer networks.
+  tags:
+  - multilayer
+  - scales
+  - species interactions
+
+
