--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 title: Ecological Complexity Lab
 subtitle: test subtitle
 description: Our stuff
-header: images/background.jpg
+header: images/background_microbes.jpg
 footer: images/background.jpg
 
 # site social media and other links
