--- a/_config.yaml
+++ b/_config.yaml
@@ -11,8 +11,8 @@ links:
   orcid: 0000-0003-0430-5568
   google-scholar: orkq9UIAAAAJ
   github: Ecological-Complexity-Lab
-  twitter: Ecological-Complexity-Lab
-  youtube: Ecological-Complexity-Lab
+  twitter: shaipilo
+#  youtube: Ecological-Complexity-Lab
 
 ### jekyll settings
 
