--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,7 +1,7 @@
 - id: doi:10.1111/2041-210X.14225
   type: paper
   description: EMLN package and guidelines
-  image: https://besjournals.onlinelibrary.wiley.com/cms/asset/d12add0e-b1fd-4727-9d4d-affcbc5e65c8/mee314225-fig-0001-m.jpg
+  image: images/projects/emln_pic.jpg # https://besjournals.onlinelibrary.wiley.com/cms/asset/d12add0e-b1fd-4727-9d4d-affcbc5e65c8/mee314225-fig-0001-m.jpg
   buttons:
     - type: website
       link: https://ecological-complexity-lab.github.io/emln_package/
