--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -67,3 +67,10 @@
 - id: doi:10.1038/s41559-017-0101
   type: paper
   image: images/publications/pic_the_multilayer_nature_of_ecological_net.webp
+
+- id: doi:10.1890/13-0678.1
+  type: paper
+  image: https://esajournals.onlinelibrary.wiley.com/cms/asset/fef9467a-1eba-4403-ba9b-9a83f870ae05/ecy20149551173-fig-0001-m.jpg
+
+- id: doi:10.1890/13-0678.1
+  image: images/publications/pic_multiple_effects_of_host_spec_diversity.jpg
