--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -83,3 +83,23 @@
 - id: doi:10.1017/s0031182013001376
   type: paper
   image: images/publications/pic_phylogenrtic_structure_of_host_spectra_in_palaearctic_fleas.jpg
+
+- id: doi:10.1016/j.ijpara.2013.05.001
+  type: paper
+  image: https://ars.els-cdn.com/content/image/1-s2.0-S0020751913001434-fx1_lrg.jpg
+
+- id: doi:10.1111/1365-2656.12101
+  type: paper
+  image: images/publications/pic_phylogeny_determines_the_role_food_webs.jpg
+
+- id: doi:10.1111/j.1600-0706.2013.00646.x
+  type: paper
+  image: images/publications/pic_coocurrence_and_phylogenetic_distance.jpg
+
+- id: doi:10.1080/15659801.2013.865338
+  type: paper
+  image: images/publications/pic_evolution_of_culture.jpg
+
+- id: doi:10.1111/1365-2656.12090
+  type: paper
+  image: images/publications/pic_temporal_dynamics_host_parasite_network.jpg
