--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -54,7 +54,7 @@
 
 - id: doi:10.1371/journal.pbio.3000336
   type: paper
-  image: images/publications/pic_comp_for_hosts_in_Plasmodium_falciparum.jpeg
+  image: images/publications/pic_comp_for_hosts_Plasmodium.jpg
 
 - id: doi:10.1038/s41467-018-04219-3
   type: paper
