--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -110,7 +110,7 @@
 
 - id: doi:10.1371/journal.pone.0041487
   type: paper
-  image: images/publications/pic_effects_of_anthropogenic_disturbance.jpeg
+  image: images/publications/pic_effects_of_anthropogenic_disturbance.jpg
 
 - id: doi:10.1644/09-mamm-a-370.1
   type: paper
