--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -15,6 +15,7 @@
   tags:
     - mutualistic interactions
     - multilayer networks
+    - space
     
 - id: doi:10.32942/X2161C
   image: images/publications/pic_scale_dependent_signatures.png
@@ -26,16 +27,16 @@
   type: paper
   image: images/publications/pic_ecological_network_analysis_reveals_cancer.png # https://www.nature.com/articles/s41467-023-41906-2/figures/1
   tags:
-    - cancer ecology
+    - cancer
     - multilayer networks
-    - not our typical paper
+    - something different
     
 - id: doi:10.1016/j.tim.2023.01.007
   type: paper
   image: images/publications/pic_conceptualizing_microbeplasmid_1.png
   tags:
     - microbial ecology
-    - theory
+    - perspective
     
 - id: doi:10.1098/rspb.2023.0132
   type: paper
@@ -50,21 +51,21 @@
   tags:
     - microbial ecology
     - multilayer networks
-    - modeling dynamics
+    - dynamics
   
 - id: doi:10.1371/journal.pcbi.1009319
   type: paper
   image: images/publications/pic_the_inerplay_between_vaccination_and_COVID19.jpeg
   tags:
-    - modeling dynamics
-    - not our typical paper
+    - dynamics
+    - something different
     - disease
     
 - id: doi:10.3389/fevo.2021.633263
   type: paper
   image: https://www.frontiersin.org/files/Articles/633263/fevo-09-633263-HTML-r2/image_m/fevo-09-633263-g001.jpg #images/publications/pic_frequency_dependent_competition_between_strains.jpeg
   tags:
-    - modeling dynamics
+    - dynamics
     - disease
     
 - id: doi:10.1111/2041-210X.13569
@@ -83,29 +84,44 @@
   image: images/publications/pic_the_network_structure_and_eco_evol_CRISPR.webp
   tags:
     - microbial ecology
-    - modeling dynamics
+    - dynamics
     - host-parasite interactions
     
 - id: doi:10.3390/cancers12040825
   type: paper
   image: images/publications/pic_pan_cancer_analysis_of_mitochondria_chaperone.png
-
+  tags:
+    - cancer
+    
 - id: doi:10.1371/journal.pbio.3000336
   type: paper
   image: images/publications/pic_comp_for_hosts_Plasmodium.jpg
+  tags:
+    - disease
+    - dynamics
+    - multilayer networks
 
 - id: doi:10.1038/s41467-018-04219-3
   type: paper
   image: images/publications/pic_net_of_genetics_similaruty_Plasmodium_falciparum.webp
-
+  tags:
+    - disease
+      
 - id: doi:10.1016/j.jtbi.2017.07.020
   type: paper
   image: images/publications/pic_asymmetric_disease_dynamics.jpeg
-
+  tags:
+    - disease
+    - dynamics
+    - multilayer networks
+    
 - id: doi:10.1038/s41559-017-0101
   type: paper
   image: images/publications/pic_the_multilayer_nature_of_ecological_net.webp
-
+    tags:
+    - perspecrive
+    - multilayer networks
+    
 - id: doi:10.1890/13-0678.1
   type: paper
   image: https://esajournals.onlinelibrary.wiley.com/cms/asset/fef9467a-1eba-4403-ba9b-9a83f870ae05/ecy20149551173-fig-0001-m.jpg
