--- a/_config.yaml
+++ b/_config.yaml
@@ -4,6 +4,8 @@ subtitle: Elucidating the complexity of ecological systems
 description: Elucidating the complexity of ecological systems
 header: images/background_multilayer.jpg
 footer: images/background_microbes.jpg
+publications_background: images/background_dalle.jpg
+
 
 # site social media and other links
 links:
