--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: Ecological Complexity Lab
 subtitle: Elucidating the complexity of ecological systems
 description: Elucidating the complexity of ecological systems
-header: images/background_multilayer.jpg
-footer: images/background_microbes.jpg
+header: images/background_dalle.jpg # background_multilayer.jpg
+footer: images/background_dalle.jpg # background_microbes.jpg
 
 
 # site social media and other links
