--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -22,14 +22,14 @@
     - software
 
 
-  - title: Lotka-Voltera teaching app
-    group: featured
-    image: images/projects/LV.png
-    link: https://ecomplab.com/teaching/
-    description: A small app for students to play with when learning LV model for competition
-    tags:
-      - teaching
-      - dynamics
+- title: Lotka-Voltera teaching app
+  group: featured
+  image: images/projects/LV.png
+  link: https://ecomplab.com/teaching/index.html
+  description: A small app for students to play with when learning LV model for competition
+  tags:
+    - teaching
+    - dynamics
     
 
 
