--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -25,7 +25,7 @@
 - title: Lotka-Voltera teaching app
   group: featured
   image: images/projects/LV.png
-  link: https://ecomplab.com/teaching/index.html
+  link: https://ecomplab.com/teaching/lvmodel/index.html
   description: A small app for students to play with when learning LV model for competition
   tags:
     - teaching
