--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -28,7 +28,7 @@ labmanager:
 
 coder:
   icon: fa-solid fa-code
-  description: Programmer
+  description: Code developer
   
 alumni:
   icon: fa-regular fa-thumbs-up
