--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -40,5 +40,11 @@
     - teaching
     - dynamics
 
-
+- title: Stability Game
+  group: featured
+  image: images/projects/bee_stabilitygame.png
+  link: https://ecomplab.com/stabilitygame/
+  description: Distribute 30 interactions as you like to find a robustness score as high as possible.
+  tags:
+    - teaching
 
