--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -132,6 +132,12 @@ linkedin:
   tooltip: LinkedIn
   link: https://www.linkedin.com/in/$VALUE
 
+Welcome:
+  icon: fa-solid fa-atom
+  text: Welcome
+  tooltip: Welcome to the Lab
+  link: https://ecomplab.com/labentry/
+
 # alerts
 
 tip:
