--- a/_config.yaml
+++ b/_config.yaml
@@ -13,6 +13,7 @@ links:
   google-scholar: orkq9UIAAAAJ
   github: Ecological-Complexity-Lab
   twitter: shaipilo
+  Welcome: https://ecomplab.com/labentry/
 #  youtube: Ecological-Complexity-Lab
 
 ### jekyll settings
