--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,11 @@
+- id: doi:10.32942/X2JS75
+  type: preprint
+  image: images/publications/pic_inductive_link_prediction_in_ecological_net.png
+  tags:
+    - link prediction
+    - machine learning
+    - ecological networks
+    
 - id: doi:10.1111/2041-210X.14225
   description: EMLN package and guidelines
   image: images/projects/emln_pic.jpg #https://besjournals.onlinelibrary.wiley.com/cms/asset/d12add0e-b1fd-4727-9d4d-affcbc5e65c8/mee314225-fig-0001-m.jpg  
@@ -184,3 +192,6 @@
   image: images/publications/pic_variability_in_urine_concentration.jpg
   tags:
     - bats
+
+
+  
