change getting started link
 to the new landing page Shai created in Notion

--- a/_config.yaml
+++ b/_config.yaml
@@ -13,7 +13,7 @@ links:
   google-scholar: orkq9UIAAAAJ
   github: Ecological-Complexity-Lab
   twitter: shaipilo
-  Welcome: https://ecomplab.com/labentry/
+  Welcome: https://ecomplab.notion.site/Welcome-to-the-ecological-complexity-lab-1eb19d66de1e8044bc02c17f1363c046
 #  youtube: Ecological-Complexity-Lab
 
 ### jekyll settings
