--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -141,7 +141,7 @@ Welcome:
   icon: fa-solid fa-atom
   text: Welcome
   tooltip: Welcome to the Lab
-  link: https://ecomplab.com/labentry/
+  link: https://ecomplab.notion.site/Welcome-to-the-ecological-complexity-lab-1eb19d66de1e8044bc02c17f1363c046
 
 # alerts
 
