--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,17 @@
+- id: doi:10.1038/s41559-025-02715-6
+  type: paper
+  image: images/publications/pic_ILP.jpeg
+  tags:
+    - machine learning
+    - link prediction
+    - ecological networks
+
+- id: doi:10.1101/2025.05.31.657151
+  type: preprint
+  image: images/publications/pic_plasmid_persistence.png
+  tags:
+    - microbial ecology
+    - plasmid
 
 - id: doi:10.32942/X2PP94
   type: preprint
