--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,14 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- id: doi:10.1093/ismeco/ycag026
+  title: pendingpublications
+  authors: []
+  publisher: ''
+  date: ''
+  link: https://doi.org/hbnznr
+  orcid: 0000-0003-0430-5568
+  plugin: orcid.py
+  file: orcid.yaml
 - id: doi:10.1111/1365-2664.70213
   title: Local knowledge enhances the sustainability of interconnected fisheries
   authors:
