--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -53,7 +53,7 @@
 
 - title: Robustness Game
   group: featured
-  image: images/projects/stabilitygame3.png
+  image: images/projects/bee.png
   link: https://ecomplab.com/robustnessgame/
   description: Save the bees and plants by building the most robust network that you can!.
   tags:
