--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -47,7 +47,7 @@
   - Geut Galai
   - Rami Puzis
   - Shai Pilosof
-  publisher: Cold Spring Harbor Laboratory
+  publisher: openRxiv
   date: '2025-11-20'
   link: https://doi.org/hbb8ks
   orcid: 0000-0003-0430-5568
@@ -143,7 +143,7 @@
   - Daniel Kleiner
   - Shai Pilosof
   - Shimon Bershtein
-  publisher: Cold Spring Harbor Laboratory
+  publisher: openRxiv
   date: '2025-06-20'
   link: https://doi.org/g9q3gx
   orcid: 0000-0003-0430-5568
